--- a/products.html
+++ b/products.html
@@ -270,10 +270,10 @@
                 <div class="content-sm container">
                     <div class="row">
                         <div class="col-sm-3 sm-margin-r-20 ">
-                                <div class="bee-block bee-block-1 bee-image"><img alt="" class="bee-center bee-autowidth" src="images/Bangalore-Section-Logo-white-1-01.png" style="max-width:250px;"/></div>
-                                <div class="bee-block bee-block-2 bee-social">
-                                <div class="content"><span class="icon" style="padding:0 1.5px 0 1.5px;"><a href="https://www.facebook.com/"><img alt="Facebook" src="images/facebook2x.png" title="Facebook"/></a></span><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://twitter.com/"><img alt="Twitter" src="images/twitter2x.png" title="Twitter"/></a></span><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://instagram.com/"><img alt="Instagram" src="images/instagram2x.png" title="Instagram"/></a></span><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://www.linkedin.com/"><img alt="LinkedIn" src="images/linkedin2x.png" title="LinkedIn"/></a></span></div>
-                                </div>
+                            <div class="bee-block bee-block-1 bee-image"><img alt="" class="bee-center bee-autowidth" src="img/images/Bangalore-Section-Logo-white-1-01.png" style="max-width:250px;"/></div>
+                            <div class="bee-block bee-block-2 bee-social">
+                            <div class="content"><span class="icon" style="padding:0 1.5px 0 1.5px;"><a href="https://www.facebook.com/"><img alt="Facebook" src="img/images/facebook2x.png" title="Facebook"/></a></span><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://twitter.com/"><img alt="Twitter" src="img/images/twitter2x.png" title="Twitter"/></a></span><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://instagram.com/"><img alt="Instagram" src="img/images/instagram2x.png" title="Instagram"/></a></span><span class="icon" style="padding:0 2.5px 0 2.5px;"><a href="https://www.linkedin.com/"><img alt="LinkedIn" src="img/images/linkedin2x.png" title="LinkedIn"/></a></span></div>
+                             </div>
                             <!-- End List -->
                         </div>
                         <div class="col-sm-2">
